# Sdl-Grav-Shift-Game

./: CMakeLists.txt  vcpkg.json
src/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Window.cpp  Window.h  main.cpp
src/component/: Component.cpp  Component.h  PositionComponent.h  RectGeometryGraphicComponent.h  VelocityComponent.h
src/math/: Vec2f.cpp  Vec2f.h
src/rendering/: ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/system/: GLRectRenderSystem.cpp  GLRectRenderSystem.h  GeometricRenderSystem.cpp  GeometricRenderSystem.h  System.cpp  System.h  VelocitySystem.cpp  VelocitySystem.h
